@@ -1,6 +1,7 @@
 Revision history for Mojolicious-Plugin-OpenAPI-Modern
 
 {{$NEXT}}
+          - new helper method validate_request
 
 0.001     2022-02-16 06:14:12Z
           - First version, unleashed upon an unsuspecting world.
